--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@joi/date": "^2.1.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/x-data-grid": "^5.5.0",
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.23"
   }
 }
